# JaneStreetChallenge

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: sig_channels_ar_p7.json  sig_channels_k6.json
artifacts/bench/: PLAN_24H.md  REPORT_V2.md  ablation_rsig.json  ablation_symbol.json
artifacts/bench/bag700/: gru_s1.json
artifacts/bench/exp_bag_A/: experiment_log.txt
artifacts/bench/gru_curriculum/: curriculum.json
artifacts/bench/main/: gru.json  gru_modelr.json  lstm_modelr.json  mlp.json  results.md  sig_transformer.json  transformer.json  (+1 more)
artifacts/clusters/: symbol_clusters_k3.json
docs/: FEATURE_RESEARCH.md  GPU_RESEARCH_PLAN.md  TECHNICAL_REPORT.md  TIME_SERIES_GUIDE.md  WHAT_DIDNT_WORK.md  technical_report.tex
docs/book/: main.tex
experiments/: example_bag.yaml
notebooks/: colab_recency_sweep.ipynb  colab_train_500d.ipynb  colab_train_lstm_member.ipynb  colab_train_mounted.ipynb  kaggle_batch_runner.ipynb  kaggle_submission.ipynb  kaggle_train_lstm_member.ipynb
scripts/: ablate_fourier.py  ablate_innovations.py  ablate_responder_signal.py  ablate_reversal_decomp.py  ablate_symbol_identity.py  ae_features.py  aux_innovation_lab.py  bench.py  blend_v3.py  cluster_symbols.py  drw_feature_lab.py  encode_ae_latents.py  enrich_pool.py  ensemble_blend.py  export_parquet.py  pack_submission_weights.py  precompute_dataset.py  profile_features.py  rebuild_pool_ablation.py  regen_ensemble_blend.py  resp_story_lab.py  responder_chain.py  rewalk_cheap_member.py  rewalk_checkpoint.py  run_280_checkpoint.sh  run_arch_rerun.sh  run_arch_wave.sh  run_experiment.py  run_window_ladder.sh  run_window_scaleout.sh  run_xsec_deepdive.sh  select_signature_channels.py  select_signature_channels_ar.py  setol_stop.py  ship_catchup.py  sig_latents.py  stack_residual.py  sweep_refit_lr.py  sweep_window_length.py  synth_bench.py  (+5 more)
scripts/serving/: feature_state.py  kernel_state.py  replay_check.py
src/janestreet/: __init__.py  cli.py  config.py  pipeline.py
(+84 files in other folders)
